# backup

./: .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: infra_primary-db_2023-09-29T16:51:00Z.sql
devops/commands/: entrypoint.sh
src/: main.py  start.sh
src/services/: cron.py
src/utils/: builders.py  config.py  environment.py  functions.py  io.py  patterns.py
src/utils/notifiers/: base.py  slack.py  telegram.py
src/utils/storages/: aws.py  base.py  local.py  remote.py
src/utils/targets/: base.py  directory.py  file.py  postgresql.py
